@@ -14,33 +14,47 @@ local hasBuff = false
 GameTooltip:HookScript("OnUpdate", function(self)
 	if GameTooltip:IsVisible() then
 		if GameTooltip:GetOwner():GetName() == "UIParent" then
-			mouseoverName = _G["GameTooltipTextLeft"..1]:GetText()
-			for name, data in pairs(addonTable.mouseoverDB) do
-				if name == mouseoverName then
-					for i = 1, self:NumLines() do
-						if string.find(_G[self:GetName().."TextLeft"..i]:GetText(), addonName) then return end
-					end
-					if data.buffId ~= 0 or data.buffId ~= nil then
-						for i = 1, 16 do
-							local _, _, _, _, _, expiration, _, _, _, spellId = UnitAura("player", i)
-							if spellId == data.buffId and expiration > 0 then
-								startTime = GetTime()
-								timeLeft = expiration - startTime
-								hasBuff = true
-								break
-							end
+			if UnitGUID("mouseover") ~= nil then
+				-- The mouseover target is a creature.
+				local _, _, _, _, _, npcId = strsplit("-", UnitGUID("mouseover")); npcId = tonumber(npcId)
+				for nameOrId, data in pairs(addonTable.mouseoverDB) do
+					if nameOrId == npcId then
+						for i = 1, self:NumLines() do
+							if string.find(_G[self:GetName().."TextLeft"..i]:GetText(), addonName) then return end
 						end
-						if hasBuff then
-							GameTooltip:AddLine("|cffFFFFFF" .. addonName .. "|r: " .. data.note .. " (|cffFFFFFF" .. string.format("%.2f", timeLeft) .. "|r)")
-							GameTooltip:Show()
-							hasBuff = false
+						GameTooltip:AddLine("|cffFFFFFF" .. addonName .. "|r: " .. data.note)
+						GameTooltip:Show()
+					end
+				end
+			else
+				mouseoverName = _G["GameTooltipTextLeft"..1]:GetText()
+				for nameOrId, data in pairs(addonTable.mouseoverDB) do
+					if nameOrId == mouseoverName then
+						for i = 1, self:NumLines() do
+							if string.find(_G[self:GetName().."TextLeft"..i]:GetText(), addonName) then return end
+						end
+						if data.buffId ~= 0 or data.buffId ~= nil then
+							for i = 1, 16 do
+								local _, _, _, _, _, expiration, _, _, _, spellId = UnitAura("player", i)
+								if spellId == data.buffId and expiration > 0 then
+									startTime = GetTime()
+									timeLeft = expiration - startTime
+									hasBuff = true
+									break
+								end
+							end
+							if hasBuff then
+								GameTooltip:AddLine("|cffFFFFFF" .. addonName .. "|r: " .. data.note .. " (|cffFFFFFF" .. string.format("%.2f", timeLeft) .. "|r)")
+								GameTooltip:Show()
+								hasBuff = false
+							else
+								GameTooltip:AddLine("|cffFFFFFF" .. addonName .. "|r: " .. data.note)
+								GameTooltip:Show()
+							end
 						else
 							GameTooltip:AddLine("|cffFFFFFF" .. addonName .. "|r: " .. data.note)
 							GameTooltip:Show()
 						end
-					else
-						GameTooltip:AddLine("|cffFFFFFF" .. addonName .. "|r: " .. data.note)
-						GameTooltip:Show()
 					end
 				end
 			end
